# gitoxide-fs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
examples/: auto_commit.rs  basic_mount.rs  fork_workflow.rs
src/: blobstore.rs  cli.rs  commit.rs  config.rs  error.rs  fork.rs  fs.rs  git.rs  health.rs  lib.rs  main.rs
tests/: cli.rs  commit_batching.rs  error_handling.rs  fork_merge.rs  fs_basic.rs  git_backend.rs  git_integration.rs  performance.rs  test_agentic.rs  test_cli.rs  test_concurrency.rs  test_config.rs  test_e2e_smoke.rs  test_edge_cases.rs  test_error_recovery.rs  test_file_operations.rs  test_fork_merge.rs  test_git_integration.rs  test_gitignore_commit.rs  test_links.rs  test_mount_integration.rs  test_real_world_workflow.rs  test_xattr.rs
tests/common/: mod.rs
