[package]
name = "gitoxide-fs"
version = "0.1.0"
edition = "2021"
description = "A FUSE filesystem backed by git, written in Rust. Every file edit becomes a git commit transparently."
license = "MIT"
readme = "README.md"

[[bin]]
name = "gitoxide-fs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fuser = "0.15"
gix = { version = "0.72", features = ["blocking-network-client"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
